2004-04-03  Don Allingham  <dallingham@users.sourceforge.net>
	* GrampsMime.py: added mime types
	* grampslib_wrap.c: removed
	* various: more undo functionality

2004-03-29  Don Allingham  <dallingham@users.sourceforge.net>
	* various: Add undo functionality

2004-03-27  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/rel_it.py: Convert to class. 

2004-01-26  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/FtmStyleDescendants.py (_make_default_style, 
	print_children): Add new style for numbering children.

2004-03-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: remove unused functions, fix history
	* src/FamilyView.py: improve reordering of children

2004-03-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: rebuild models after import
	* src/gramps.glade: expand child menu
	* src/PeopleView.py: handle sorting of columns
	* src/PeopleModel.py: handle sorting of columns
	* src/ChooseParents.py: handle sorting of columns
	* src/SelectPerson.py: use PersonModel
	* src/SelectChild.py: use PersonModel
	* src/plugins/FilterEditor.py: use new SelectPerson

2004-03-22  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Fix colliding name.
	* src/PedView.py (on_show_child_menu): Switch to id.
	* src/EditPerson.py (draw_lds): Don't include main family twice.
	* src/docgen/PdfDoc.py (add_photo): Encode filename.

2004-03-21  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddMedia.py: GenericTreeModel changes
	* src/AddSpouse.py: GenericTreeModel changes
	* src/ChooseParents.py: GenericTreeModel changes
	* src/ColumnOrder.py: GenericTreeModel changes
	* src/DateEdit.py: GenericTreeModel changes
	* src/EditPerson.py: GenericTreeModel changes
	* src/FamilyView.py: GenericTreeModel changes
	* src/MediaView.py: GenericTreeModel changes
	* src/RelLib.py: GenericTreeModel changes
	* src/SourceView.py: GenericTreeModel changes
	* src/gramps_main.py: GenericTreeModel changes