@@ -693,10 +693,10 @@ class GedcomParser:
         return note
         
     def parse_note(self,matches,obj,level,old_note):
-        self.parse_note_base(matches,obj,level,old_note,obj.set_note)
+        return self.parse_note_base(matches,obj,level,old_note,obj.set_note)
 
     def parse_comment(self,matches,obj,level,old_note):
-        self.parse_note_base(matches,obj,level,old_note,obj.set_comments)
+        return self.parse_note_base(matches,obj,level,old_note,obj.set_comments)
 
     def parse_individual(self):
         name_cnt = 0
